# markov_chain_images

./: .coverage  .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  tasks.py
.github/workflow/: deploy.yaml
Documentation/: implementation_document.md  project_specification.md  testing_document.md  week_1_report.md  week_2_report.md  week_3_report.md  week_4_report.md  week_5_report.md  week_6_report.md
htmlcov/: d_145eef247bfb46b6_basic_markov_chain_py.html  d_145eef247bfb46b6_main_py.html  d_5fff82e951f4e7e5_node_py.html  d_5fff82e951f4e7e5_stack_py.html  d_67f6f9a13eff1831_basic_markov_chain_py.html  index.html  status.json
src/: basic_markov_chain.py  main.py  routes.py
src/entities/: __init__.py  node.py  stack.py  trie.py  trie_node.py
src/input/: cat6.jfif
src/services/: __init__.py  basic_markov_chain.py
src/templates/: image.html  index.html  template_image.html
src/tests/: basic_markov_chain_test.py  trie_node_test.py  trie_test.py
