[tool.poetry]
name = "markov_chain_images"
version = "0.1.0"
description = ""
authors = ["PurPul <axbergsamuel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pylint = "^2.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
